--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18",
-    "serverless-mysql": "^1.5.5"
+    "serverless-mysql": "^1.5.5",
+    "sonner": "^1.5.0"
   },
   "devDependencies": {
     "@types/node": "^20",
